--- a/style/sass/base/_variables.scss
+++ b/style/sass/base/_variables.scss
@@ -1,5 +1,13 @@
-$faehre-in-service: #28a745;
-$faehre-limited-service: #ffc107;
-$faehre-out-of-service: #dc3545;
-$faehre-white: #ffffff;
+$breakpoint-tablet: 480px;
+$breakpoint-desktop: 980px;
+
+$faehre-white: #fff;
 $button-bg-color: #0073aa;
+
+$faehre-in-service: #28a745;
+$faehre-limited-service: #ca7c05;
+$faehre-out-of-service: #dc3545;
+$faehre-in-service-light: #d7f6d7;
+$faehre-limited-service-light: #fff3cd;
+$faehre-out-of-service-light: #f8d7da;
+$faehre-status-date: #666;
