--- a/style/sass/faehre-status.scss
+++ b/style/sass/faehre-status.scss
@@ -7,10 +7,15 @@
 		order: 1;
 	}
 
-	.faehre-status-button {
+	.faehre-status-button-wrapper {
 		display: flex;
-		font-size: 14px;
 		order: 2;
+
+		button {
+			cursor: pointer;
+			font-size: 14px;
+			text-decoration: none;
+		}
 	}
 
 	@include responsive(mobile_tablet) {
@@ -18,7 +23,7 @@
 			order: 2;
 		}
 
-		.faehre-status-button {
+		.faehre-status-button-wrapper {
 			order: 1;
 		}
 	}
