--- a/style/sass/base/_variables.scss
+++ b/style/sass/base/_variables.scss
@@ -3,6 +3,8 @@ $breakpoint-desktop: 980px;
 
 $faehre-white: #fff;
 $button-bg-color: #0073aa;
+$main-color: #152a6b;
+$default-color: #333;
 
 $faehre-in-service: #28a745;
 $faehre-limited-service: #ca7c05;
